Update contact email links to be clickable in multiple HTML files and text in herosection

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div>
 
         <div class="idastamhus">
-          <h1>Ida</h1>
-          <h1>Stamhus</h1>
+          <h1 class="ida">IDA</h1>
+          <h1 class="stamhus">STAMHUS</h1>
         </div>
       </section>
 
@@ -84,7 +84,7 @@
     <footer>
       <div class="footerkontakt">
         <p class="footerkontakt">Tag kontakt:</p>
-        <p class="footerkontakt">idst0002@stud.ek.dk</p>
+        <p><a href="mailto:idst0002@stud.ek.dk" class="mail">idst0002@stud.ek.dk</a></p>
         <p class="footerkontakt">+45 60 24 55 16</p>
       </div>
 
