--- a/computer.html
+++ b/computer.html
@@ -75,7 +75,7 @@
     <footer>
       <div class="footerkontakt">
         <p class="footerkontakt">Tag kontakt:</p>
-        <p class="footerkontakt">idst0002@stud.ek.dk</p>
+        <p><a href="mailto:idst0002@stud.ek.dk" class="mail">idst0002@stud.ek.dk</a></p>
         <p class="footerkontakt">+45 60 24 55 16</p>
       </div>
 
