--- a/ommig.html
+++ b/ommig.html
@@ -39,7 +39,7 @@
       <section class="ommig-grid">
         <div class="kolonne1">
           <div class="selvportaet">
-            <img src="imgs/selvportraet_result-kopi2.webp" alt="portræt" /> 
+            <img src="imgs/selvportraet_result-kopi2.webp" alt="portræt" />
           </div>
         </div>
 
@@ -99,7 +99,7 @@
     <footer>
       <div class="footerkontakt">
         <p class="footerkontakt">Tag kontakt:</p>
-        <p class="footerkontakt">idst0002@stud.ek.dk</p>
+        <p><a href="mailto:idst0002@stud.ek.dk" class="mail">idst0002@stud.ek.dk</a></p>
         <p class="footerkontakt">+45 60 24 55 16</p>
       </div>
 
