Add project description for "Virksomhedssite" section and refine text in "Sandkassesite" article

--- a/virksomhed.html
+++ b/virksomhed.html
@@ -36,13 +36,22 @@
         <div class="streg"></div>
       </section>
 
+      <section class="t5">
+        <h2 class="tematitel">Virksomhedssite</h2>
+        <p class="tematekst">
+          I dette tema “Grundlæggende indhold” havde vi to projekter. Vi skulle først designe og kode et såkaldt “Sandkassesite” ud fra et selvvalgt emne, hvor jeg valgte “Industrial vintage for alle”. Som 2. del af opgaven, skulle vi i grupper blive
+          enige om et allerede eksisterende site, som vi ville optimere på. Min gruppe gik med spisestedet “Hanoi Alley”.
+        </p>
+        <div class="streg"></div>
+      </section>
+
       <section class="procesoglaering">
         <h2 class="tematitelh2">Proces og læring (Sandkassesite)</h2>
 
         <article class="tematekst">
           <p>
             I tema 5 om grundlæggende indhold arbejdede jeg i første opgave- sandkassesitet, med udvikling af et selvvalgt emne fra idé til færdigt koncept. Processen omfattede udarbejdelse af moodboard og style tile for at definere det visuelle
-            udtryk samt udvikling og strukturering af indhold målrettet brugeren. Derudover arbejdede jeg med Firefox AI og adobe Illustrator som et værktøj i idé- og indholdsudviklingen til mine billeder. Forløbet blev afsluttet med udvikling og
+            udtryk samt udvikling og strukturering af indhold målrettet brugeren. Derudover arbejdede jeg med Firefox AI og Adobe Illustrator som et værktøj i idé- og indholdsudviklingen til mine billeder. Forløbet blev afsluttet med udvikling og
             kodning af en prototype, som samlede indhold, design og funktion.
           </p>
         </article>
