Fix typos in "Emergencysite", "Emnesite", and "Virksomhedssite" sections for improved clarity

--- a/emergency.html
+++ b/emergency.html
@@ -40,7 +40,7 @@
       <section class="t4">
         <h2 class="tematitel">Emergencysite</h2>
         <p class="tematekst">
-          I dette tema “Grundlæggende indhold”, fik jeg til opgave at kreere mit eget “Emergencysite”, hvor jeg valgte at arbejde med emnet “For sent op”. Jeg har under T4 fået en grundlæggende forståelse for samspillet mellem visuelt design,
+          I dette tema “Grundlæggende Brugergrænseflade”, fik jeg til opgave at kreere mit eget “Emergencysite”, hvor jeg valgte at arbejde med emnet “For sent op”. Jeg har under T4 fået en grundlæggende forståelse for samspillet mellem visuelt design,
           struktur og funktionalitet i webudvikling.
         </p>
         <div class="streg"></div>
