--- a/emnesite.html
+++ b/emnesite.html
@@ -37,7 +37,7 @@
       </section>
 
       <section class="t3">
-        <h2 class="tematitel">Emnesitesite</h2>
+        <h2 class="tematitel">Emnesite</h2>
         <p class="tematekst">
           I dette tema “Grundlæggende UX/UI", fik jeg til opgave at kreere et site ud fra et selvvalgt emne, hvor jeg valgte at lave et site omhandlende overordnet musikinspiration og kuraterede playlister. Jeg arbejdede med både visuelle og tekniske
           aspekter af udviklingen af et website.
