--- a/virksomhed.html
+++ b/virksomhed.html
@@ -39,7 +39,7 @@
       <section class="t5">
         <h2 class="tematitel">Virksomhedssite</h2>
         <p class="tematekst">
-          I dette tema “Grundlæggende indhold” havde vi to projekter. Vi skulle først designe og kode et såkaldt “Sandkassesite” ud fra et selvvalgt emne, hvor jeg valgte “Industrial vintage for alle”. Som 2. del af opgaven, skulle vi i grupper blive
+          I dette tema “Grundlæggende Indhold” havde vi to projekter. Vi skulle først designe og kode et såkaldt “Sandkassesite” ud fra et selvvalgt emne, hvor jeg valgte “Industrial Vintage for Alle”. Som 2. del af opgaven, skulle vi i grupper blive
           enige om et allerede eksisterende site, som vi ville optimere på. Min gruppe gik med spisestedet “Hanoi Alley”.
         </p>
         <div class="streg"></div>
